@@ -9,3 +9,4 @@ sabayon-monitor
 sabayon-session
 sabayon.console
 sabayon.desktop
+sabayon-xinitrc.sh
